--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,21 +30,7 @@ jobs:
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
       - name: Publish
-        run: yarn lerna publish --conventional-commits --no-changelog --yes
+        run: yarn lerna publish --conventional-commits --no-changelog --yes --force-publish
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  notify-failure:
-    runs-on: ubuntu-20.04
-    needs: [publish]
-    if: failure()
-    steps:
-      - id: url
-        run: echo "::set-output name=url::${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-      - uses: slackapi/slack-github-action@v1.19.0
-        with:
-          payload: |
-            { "url": "${{steps.url.outputs.url}}" }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_BUILD_FAILED_ALERT_WEBHOOK_URL }}
