--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,17 @@ jobs:
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
       - name: Publish
-        run: yarn lerna publish --conventional-commits --no-changelog --yes --force-publish
+        run: |
+          yarn lerna publish --conventional-commits --no-changelog --yes --no-push
+          git checkout -b update-version
+          git push --set-upstream origin update-version
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create release PR
+        uses: peter-evans/create-pull-request@v3
+        with:
+          branch: update-version
+          base: develop
+          title: "bump versions"
+          draft: false
