--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Publish
         run: |
-          yarn lerna publish --conventional-commits --no-changelog --yes --no-push
+          yarn lerna version --conventional-commits --no-changelog --yes --no-push
           git checkout -b update-version
           git push --set-upstream origin update-version
         env:
