--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,8 +14,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          persist-credentials: false
       - id: node_version
         run: echo "::set-output name=version::16.x"
       - name: Use Node.js ${{ steps.node_version.outputs.version }}
@@ -34,8 +32,7 @@ jobs:
       - name: Publish
         run: |
           yarn lerna version --conventional-commits --no-changelog --yes --no-push
-          git checkout -b update-version
-          git push --set-upstream origin update-version
+          git push origin update-version
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
