--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,8 +32,7 @@ jobs:
       - name: Publish
         run: |
           yarn lerna version --conventional-commits --no-changelog --yes --no-push
-          git status
-          git push --set-upstream origin update-version
+          git push --set-upstream origin main:update-version
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
