--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   publish:
-    if: github.event.pull_request.merged == true && github.event.pull_request.user.login != "github-actions[bot]"
+    if: github.event.pull_request.merged == true && github.event.pull_request.user.login != 'github-actions[bot]'
     name: Publish
     runs-on: ubuntu-18.04
     steps:
